--- a/src/pages/thoughts/technical-discovery-canvas.mdx
+++ b/src/pages/thoughts/technical-discovery-canvas.mdx
@@ -77,9 +77,9 @@ Measure what's happening now so you begin to understand how much the problem is 
 
 <User />
 
-This is where good collaboration with user experience research and designers comes in. Team work really does makes the dream work. 
+This is where good collaboration with user experience researchers and designers comes in. Team work really does makes the dream work. 
 
-Check out Dovetail for the rich insight from our user research and cusomer feedback, and ensure a UX consultant is part of the team. Without good knowledge of user needs, we are building on a bed of sand.
+Without good knowledge of user needs, we are building on a bed of sand.
 
 By understanding what types of users and customers we should focus on, we ensure we are focussed on creating experiences they will value.
 
@@ -129,7 +129,7 @@ Examples of criteria are afforability, maintainability, interoperability, scalab
 
 <Exploration />
 
-With your shopping list of technology types, start exploring potential services and tools that will provide the capabilities needed to serve your users journey.
+With your shopping list of technology types, start exploring potential services and tools that will provide the capabilities needed to serve your users' journey.
 
 Create a matrix and score each option against each of your criteria. You may want to give a weighting to the principles that are a priority to your project.
 
