--- a/src/pages/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
+++ b/src/pages/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
@@ -9,7 +9,7 @@ theme: "self-improvement"
 
 import ReadMore from "../../components/ReadMore.astro";
 
-If you are going to set a goal, you first need to think: "who do I need to be to achieve that goal"?
+When you set a goal, you first need to think: "who do I need to be to achieve that goal"?
 
 If you want to run a marathon, you need to embrace the identity of a runner.
 
