--- a/src/pages/thoughts/how-to-create-the-perfect-post.mdx
+++ b/src/pages/thoughts/how-to-create-the-perfect-post.mdx
@@ -5,6 +5,7 @@ description: How to turn insight into a social media post
 stage: note
 lastEdited: 1.09.2022
 theme: "self-promotion"
+draft: true
 ---
 
 import ReadMore from "../../components/ReadMore.astro";
