--- a/src/pages/thoughts/interstitial-journalling.mdx
+++ b/src/pages/thoughts/interstitial-journalling.mdx
@@ -3,40 +3,52 @@ layout: ../../layouts/Layout.astro
 title: Interstitial journalling
 description: Mindfully journalling throughout the day
 stage: essay
-lastEdited: 15.1.2023
+lastEdited: 22.1.2023
 theme: "self-improvement"
 ---
 
 import ReadMore from "../../components/ReadMore.astro";
 
-I've been writing a weekly reflection at the end of the working week which helps me structure my thoughts about what things have and gone well and how I might do things differently.
+I've been writing a weekly reflection at the end of the working week which helps me think about what things have and gone well and how I might do things differently.
 
-At times it has been useful, however, I'm not always in the best frame of mind on Friday afternoon. Although I timebox the exercise to add some urgency, I can be quite tired, and sometimes, I just need to prioritise finishing off a piece of work before the weekend.
+At times this reflection has been useful, however, because it's at the end of the working week, I'm not always in the best frame of mind. I can be quite tired, and sometimes, I just need to prioritise finishing off a piece of work before the weekend.
 
-I've recently started to journal as and when I need to clarify my thinking as events occur — rather than wait to the end of the week. So when I stumbled across an <a href="https://betterhumans.pub/replace-your-to-do-list-with-interstitial-journaling-to-increase-productivity-4e43109d15ef">article on Interstitial Journalling by
-Tony Stubblebine</a>, I could immediately recognise the benefits of this approach. Tony sells it as a "new journaling tactic that immediately kills procrastination and boosts creative insights".
+I don't always wait until the end of the week to write out my thoughts.
 
-The main idea behing Interstitial Journalling is that between each task, you take a little time to pause and reflect on what's just happened and what you are about to do.  Rather than a lengthy braindump, it's a micro-journal of events throughout the day.
+Sometimes, I write to structure my thoughts which helps bring clarity of mind.
+
+So when I stumbled across an <a href="https://betterhumans.pub/replace-your-to-do-list-with-interstitial-journaling-to-increase-productivity-4e43109d15ef">article on Interstitial Journalling by
+Tony Stubblebine</a>, my interest was piqued.
+
+Tony sells Interstitial Journalling as a "new journalling tactic that immediately kills procrastination and boosts creative insights".
+
+So what's the deal?
+
+The concept behind Interstitial Journalling is that between each task, you take a little time to pause and reflect on what's just happened and what you are about to do.  Rather than a lengthy braindump, it's a micro-journal of events throughout the day.
 
 When we transition between projects or tasks, we continue to think about what we've just been working on. By writing down some salient points about what's just happened, we can gain some closure which helps us concentrate on the next task.
 
 As well as emptying our minds of the last project, this also gives us the mental space to think strategically about our next project.
 
 So, here's the process:
-- Journal about what you just did - it should be a few sentences, and then journal about your next task.
-- jot down anything else that comes to mind so as to reduce your cognitive load.
-- write your next tasks as a mini to-do-list to help structure your thinking
-- when thoughts or ideas do pop into your head, you can note them down in your journal, tag them so you can easily return later, and then carry on with the task in hand.
-- also note down any time you notice yourself become distracted, take a note of the time, what you felt the trigger was, what you did and how long you were lost for.
+- Journal about what you just did — it should only be a few sentences,
+- Plan your next task as a mini to-do list.
+- When thoughts or ideas pop into your head, note them down in your journal and tag them so you can easily return later, and then carry on with the task in hand.
+- Note down any time you notice yourself become distracted, take a note of the time, what you felt the trigger was, what you did and how long you were lost for.
 
-You can also start your day with a check-in, asking yourself how you feel, what are your fears for the day and what you are looking forward to and bullet-pointing the answers
+You can also start your day with a check-in, asking yourself how you feel, what are your fears for the day and what you are looking forward to. Bullet-point the answers.
 
-I've found journaling as I work, produces mindfulness about the context, my goals, mood, and skills. I've been using Obsidian to write this journal. Obsidian allows you to add tags, so you can create automatic links to other notes, and templates so you can add in custom checklists.
+I've found journalling as I work, produces mindfulness about the context, my goals, mood, and skills. I've been using [Obsidian](https://obsidian.md) to write this journal. Obsidian allows you to add tags, which create automatic links to your notes on that subject, and templates, so you can add in custom checklists.
 
-Each time I start a new section of work, I fire up my focus checklist which reminds me to:
+Each time I start a new section of work, I fire up my "next task" checklist which reminds me to:
 - turn off notifications,
 - hide any windows that may cause distraction,
 - play some focus music/sounds,
-- set a pomodoro timer
+- set a pomodoro timer, and
+- execute (bullet point next steps).
+
+For me, this was a natural iteration and evolution of my note-taking and it's taken it to the next level. The ability to tag the notes, means I can interconnect my notes and allows me to remember a lot more.  With hoping in and out of meetings, it's not always possible to write my interstitial journal consistently but I've already seen a benefit to my output of work.
+
+And when I do come to review my week — it's a lot easier to read through the daily notes and see where I might have room for improvement.
 
 <ReadMore theme={frontmatter.theme} title={frontmatter.title} />
