--- a/src/pages/thoughts/metacognition.mdx
+++ b/src/pages/thoughts/metacognition.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/Layout.astro
 title: Metacognition, learning and me
-description: Thinking about thinking and learning
+description: The science of thinking about thinking
 stage: essay
 lastEdited: 29.10.2022
 theme: "self-improvement"
