--- a/src/pages/thoughts/procrastination.mdx
+++ b/src/pages/thoughts/procrastination.mdx
@@ -3,7 +3,7 @@ layout: ../../layouts/Layout.astro
 title: A technique for overcoming procrastination
 description: And why we prioritise other things instead
 stage: essay
-lastEdited: 22.12.2022
+lastEdited: 22.1.2023
 theme: "self-improvement"
 ---
 
@@ -11,7 +11,7 @@ import ReadMore from "../../components/ReadMore.astro";
 
 Procrastination is a habitual tendency to delay a task you planned to do. How often do you come up with an excuse to avoid what you have to do, and instead, end up doing something else that makes you feel better?
 
-We need to recognise that procrastination is deeply connected with our emotions. It's an avoidance strategy that acts as a short-term mood repair. When we procrastinate, we get temporary relief from facing an aversive task.
+Procrastination is deeply connected with our emotions. It's an avoidance strategy that acts as a short-term mood repair. When we procrastinate, we get temporary relief from facing something we don't want to do.
 
 Procrastination is also a habit. And if you want to tackle procrastination, you need to understand how habits work:
 
@@ -21,9 +21,13 @@ Procrastination is also a habit. And if you want to tackle procrastination, you 
 
 By changing your reaction to the cues that trigger your habit of procrastination, you can start working on the things that matter:
 
-- Recognise the cues: where are you when this happens? what time of day is it? Try <a href="./interstitial-journalling">interstitial journalling</a> to help track this,
+- Recognise the cues:
+    - where are you when this happens?
+    - what time of day is it?,
 - Develop new responses to those cues, change your environment, eliminate those distractions.
-- Reward the new behaviour — be consistent
+- Reward the new behaviour — be consistent.
+
+You can try <a href="./interstitial-journalling">interstitial journalling</a> to help track when you procrastinate.
 
 Write out your strategy as an Implementation Intention:
 
@@ -43,6 +47,7 @@ Here's a process to get started:
 - elimate distractions,
 - put some music on,
 - set a pomodoro timer for 25 minutes,
+- write out your next few steps as a mini to-do list,
 - concentrate on the next task (if the task is overwhelmingly large, break it up into smaller chunks - making progress gives you an emotional boost),
 - when the timer is up, take a break.
 
