--- a/src/pages/thoughts/how-to-write-articles.mdx
+++ b/src/pages/thoughts/how-to-write-articles.mdx
@@ -5,6 +5,7 @@ description: A process for writing more structured content
 stage: note
 lastEdited: 8.09.2022
 theme: "self-promotion"
+draft: true
 ---
 
 import ReadMore from "../../components/ReadMore.astro";
