adding last edited

--- a/src/pages/thoughts/dopamine.mdx
+++ b/src/pages/thoughts/dopamine.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/Layout.astro
 title: Dopamine — this changes everything
-description: How to dopamine rules your life and what you need to do to change
+description: How dopamine rules your life and what you need to do to change
 stage: note
 lastEdited: 29.01.2023
 theme: "self-improvement"
@@ -27,17 +27,19 @@ People with Parkinson's disease have damaged dopamine systems [check and expand]
 
 With dopamine completely inhibited, we essentially become paralysed.
 
-By the way, if you want a more scientific explanation of these things...  [link to website]
+By the way, if you want a more scientific explanation of these things...  [link to website](https://hubermanlab.com/controlling-your-dopamine-for-motivation-focus-and-satisfaction/)
 
 ## How your reward system works and why layering is bad
 
 Tonic and phasic release... tonic is your baseline [expand]
 
-Volumemetric release and local synaptic release.
+Volume metric release and local synaptic release.[expand]
 
 The key thing to understand is that when we are rewarded for a behaviour, our dopamine is spiked... x happens [expand] and we get a peak in our dopamine levels.
 
 But there is only so much dopamine in our system, so after our initial peak of dopamine levels, your dopamine is depleted and we experience a trough below our normal baseline. It takes a while for our baseline to build back up to normal levels.
+
+[draw this]
 
 Different behaviours cause different peaks and those peaks last for different lengths of time.
 
@@ -49,6 +51,8 @@ Interestingly, we get a dopamine spike when we hear or read something that valid
 
 So, immediately after you experience a dopamine high, your dopamine is in a depleted state. If you experience the same thing again, it won't have the same effect as there is less dopamine in your system to spike.
 
+[draw this]
+
 This is how we build up tolerances to things. [expand]
 
 ### Layering
@@ -56,6 +60,8 @@ This is how we build up tolerances to things. [expand]
 Using your smart phone is a pleasurable experience. It contains a multitude of apps that have been finetuned to take advantage of your dopamine system to make them addictive. Many people enhance experiences by using their device, to take photos or live tweet or whatever.
 
 However, it's this layering effect that is particularly bad. We are already getting an increase of dopamine from the activity we are doing, but adding additional dopamine spikes through smart phone usage is particularly bad.
+
+[draw this]
 
 How often have you been doing something enjoyable only to pull out your smart phone and get completely distracted from what you were doing?
 
@@ -67,7 +73,7 @@ I know I have. I used to use my iPhone when practising guitar. I have found myse
 
 So one thing we can do is to go cold turkey on some of these behaviours. There are plenty of products [research this] that will help you do a digital detox.
 
-We lose that tolerance that we build up and we start to enjoy the mundane.
+We lose that tolerance that we build up and we start to enjoy the mundane. [expand]
 
 Try a complete fast from social media, videogames, and phone use for 30 days.
 
@@ -84,6 +90,8 @@ Instead of chronically spiking dopamine... randomly reward behaviours you do wan
 ### Cold water exposure
 
 Exposure to cold water gives you a slow build of dopamine that lasts for hours.
+
+[expand]
 
 ### Establishing a growth mindset
 
