updating dopamine notes

--- a/src/pages/thoughts/dopamine.mdx
+++ b/src/pages/thoughts/dopamine.mdx
@@ -3,7 +3,7 @@ layout: ../../layouts/Layout.astro
 title: Dopamine — this changes everything
 description: How dopamine rules your life and what you need to do to change
 stage: note
-lastEdited: 29.01.2023
+lastEdited: 05.02.2023
 theme: "self-improvement"
 ---
 
@@ -11,33 +11,29 @@ import ReadMore from "../../components/ReadMore.astro";
 
 ## How dopamine rules your life
 
-Dopamine is a neuromodulator.
+You may know dopamine as the *feel good* chemical in your brain. Along with serotonin, which regulates your mood, appetite and sleep, and oxytocin which is involved in regulating social behaviour and feelings of intimacy, dopamine is a neuromodulator closely associated with feelings of happiness.
 
-Dopamine effects multiple systems.
+Dopamine is released in response to pleasurable stimuli, such as food, sex, or drugs, and it sends a signal to the brain that says, "This is good, do it again." It's like a high-five from your brain, rewarding you for engaging in activities that lead to pleasure and reinforcing those behaviours.
+
+You can think of dopamine as the conductor of an orchestra — its role is integral to many of your systems. Just as the conductor directs and coordinates the actions of the musicians, dopamine helps coordinate and regulate different areas of the brain.
 
 Dopamine controls your primitive seeking and foraging behaviours. Seeking things that makes us feel good, food, water, salt, sex; and avoiding things that make us feel bad.
 
-It's an integral part of how all lifeforms [check and expand] operate.
+Your energy and mindset are controlled by dopamine. When you are in a low dopamine state, you are lethargic. When you are in a high dopamine state you are really excited.
 
-Dopamine controls your energy and mindset. When you are in a low dopamine state, you are lethargic. When you are in a high dopamine state you are really excited.
+Dopamine is critical for normal movement control, and its loss in Parkinson's disease leads to a range of motor symptoms, including tremors, rigidity, bradykinesia (slowness of movement), and postural instability. These symptoms occur because the basal ganglia, the part of the brain that is responsible for movement control, is not receiving enough dopamine to function properly.
 
-Dopamine controls motivation, and movement.
-
-People with Parkinson's disease have damaged dopamine systems [check and expand]. They can't move properly because...
-
-With dopamine completely inhibited, we essentially become paralysed.
-
-By the way, if you want a more scientific explanation of these things...  [link to website](https://hubermanlab.com/controlling-your-dopamine-for-motivation-focus-and-satisfaction/)
+With dopamine completely inhibited, we essentially become paralysed. Without dopamine, we can’t get out of bed.
 
 ## How your reward system works and why layering is bad
 
-Tonic and phasic release... tonic is your baseline [expand]
+Dopamine is released in the brain in two ways: tonic and phasic release.
 
-Volume metric release and local synaptic release.[expand]
+Tonic release refers to the continuous, low-level release of dopamine that provides a baseline level of dopamine in your brain. This tonic release helps regulate various functions, such as maintaining attention and alertness, as well as mood.
 
-The key thing to understand is that when we are rewarded for a behaviour, our dopamine is spiked... x happens [expand] and we get a peak in our dopamine levels.
+Phasic release, on the other hand, refers to the brief, intense bursts of dopamine that are released in response to pleasurable stimuli, such as food, drugs, or sex. This release of dopamine is much larger and more rapid than tonic release, and it creates a strong signal of pleasure and reinforcement in your brain.
 
-But there is only so much dopamine in our system, so after our initial peak of dopamine levels, your dopamine is depleted and we experience a trough below our normal baseline. It takes a while for our baseline to build back up to normal levels.
+But there is only so much dopamine in your system, so after a phasic release and peak of dopamine levels, your dopamine is depleted and you experience a trough below your normal baseline. It takes a while for your baseline to build back up to normal levels.
 
 [draw this]
 
@@ -99,5 +95,6 @@ You need to convince yourself that hard work is the goal. Working for a reward t
 
 Another example of this is if you are doing Intermittent Fasting.  If you concentrate on breaking the fast as the reward, then fasting can be difficult. But by attaching dopamine to the fasting by thinking about all the good that is happening to your body [expand], then the reward becomes the fast.
 
+Checkout this [Huberman lab](https://hubermanlab.com/controlling-your-dopamine-for-motivation-focus-and-satisfaction/) podcast for a much more detailed explanation of dopamine.
 
 <ReadMore theme={frontmatter.theme} title={frontmatter.title} />
