--- a/src/content/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
+++ b/src/content/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
@@ -1,13 +1,12 @@
 ---
-layout: ../../layouts/Layout.astro
 title: Be the change you wish to see in yourself
 description: How to set goals and achieve them
 stage: essay
 lastEdited: 09.09.2022
-theme: "self-improvement"
+theme: self-management
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 When you set a goal, you first need to think: "who do I need to be to achieve that goal"?
 
