--- a/src/content/thoughts/dopamine.mdx
+++ b/src/content/thoughts/dopamine.mdx
@@ -1,13 +1,12 @@
 ---
-layout: ../../layouts/Layout.astro
 title: Dopamine — this changes everything
 description: How dopamine rules your life and what you need to do to change
 stage: note
 lastEdited: 05.02.2023
-theme: "self-improvement"
+theme: self-management
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 ## How dopamine rules your life
 
