--- a/src/content/thoughts/how-to-create-the-perfect-post.mdx
+++ b/src/content/thoughts/how-to-create-the-perfect-post.mdx
@@ -1,14 +1,13 @@
 ---
-layout: ../../layouts/Layout.astro
 title: How to create the perfect post
 description: How to turn insight into a social media post
 stage: note
 lastEdited: 1.09.2022
-theme: "self-promotion"
+theme: writing
 draft: true
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 Some notes on creating social media posts.
 
