--- a/src/content/thoughts/interstitial-journalling.mdx
+++ b/src/content/thoughts/interstitial-journalling.mdx
@@ -1,13 +1,12 @@
 ---
-layout: ../../layouts/Layout.astro
 title: Interstitial journalling
 description: Mindfully journalling throughout the day
 stage: essay
 lastEdited: 22.1.2023
-theme: "self-improvement"
+theme: self-management
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 I've been writing a weekly reflection at the end of the working week which helps me think about what things have and gone well and how I might do things differently.
 
