--- a/src/content/thoughts/lean-and-mean-prototyping.mdx
+++ b/src/content/thoughts/lean-and-mean-prototyping.mdx
@@ -1,14 +1,13 @@
 ---
-layout: ../../layouts/Layout.astro
 title: Lean and mean prototyping
 description: How and why I advocate lean ux and building to learn
 stage: note
 lastEdited: 16.09.2022
-theme: "innovation"
+theme: innovation
 draft: true
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 Creating a prototype is story.
 
