--- a/src/content/thoughts/metacognition.mdx
+++ b/src/content/thoughts/metacognition.mdx
@@ -1,13 +1,12 @@
 ---
-layout: ../../layouts/Layout.astro
 title: Metacognition, learning and me
 description: The science of thinking about thinking
 stage: essay
 lastEdited: 29.10.2022
-theme: "self-improvement"
+theme: self-management
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 After writing about using the act of writing and rewriting using spaced repetition to [take my notes to the next level](./taking-notes-to-the-next-level), I became interested in how we learn, think and problem solve.
 
