--- a/src/content/thoughts/procrastination.mdx
+++ b/src/content/thoughts/procrastination.mdx
@@ -1,13 +1,12 @@
 ---
-layout: ../../layouts/Layout.astro
 title: A technique for overcoming procrastination
 description: And why we prioritise other things instead
 stage: essay
 lastEdited: 22.1.2023
-theme: "self-improvement"
+theme: self-management
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 Procrastination is a habitual tendency to delay a task you planned to do. How often do you come up with an excuse to avoid what you have to do, and instead, end up doing something else that makes you feel better?
 
