--- a/src/content/thoughts/teamwork-makes-the-dream-work.mdx
+++ b/src/content/thoughts/teamwork-makes-the-dream-work.mdx
@@ -1,14 +1,13 @@
 ---
-layout: ../../layouts/Layout.astro
 title: Teamwork makes the dream work
 description: Notes on high-performing teams
 stage: note
 lastEdited: 19.09.2022
-theme: "innovation"
+theme: innovation
 draft: true
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 Research has shown that employees with close connections at work are more productive, creative, and collaborative.
 
