--- a/src/content/thoughts/technical-discovery-canvas.mdx
+++ b/src/content/thoughts/technical-discovery-canvas.mdx
@@ -1,23 +1,22 @@
 ---
-layout: ../../layouts/Layout.astro
 title: Technical Discovery Canvas
 description: A visual guide to a process for derisking investment in technology.
 stage: note
 lastEdited: 07.01.2023
-theme: "innovation"
+theme: innovation
 ---
 
-import Activities from "../../components/Activities.astro"
-import Benefits from "../../components/Benefits.astro"
-import BusinessOutcomes from "../../components/BusinessOutcomes.astro"
-import ChecklistIcon from "../../components/ChecklistIcon.astro"
-import Cog from "../../components/Cog.astro"
-import ExperimentIcon from "../../components/ExperimentIcon.astro"
-import Exploration from "../../components/Exploration.astro"
-import ProblemDefinition from "../../components/ProblemDefinition.astro"
-import Resources from "../../components/Resources.astro"
-import TechnicalDiscoveryCanvas from "../../components/TechnicalDiscoveryCanvas.astro"
-import User from "../../components/User.astro"
+import Activities from "@drawings/Activities.astro"
+import Benefits from "@drawings/Benefits.astro"
+import BusinessOutcomes from "@drawings/BusinessOutcomes.astro"
+import ChecklistIcon from "@drawings/ChecklistIcon.astro"
+import Cog from "@drawings/Cog.astro"
+import ExperimentIcon from "@drawings/ExperimentIcon.astro"
+import Exploration from "@drawings/Exploration.astro"
+import ProblemDefinition from "@drawings/ProblemDefinition.astro"
+import Resources from "@drawings/Resources.astro"
+import TechnicalDiscoveryCanvas from "@drawings/TechnicalDiscoveryCanvas.astro"
+import User from "@drawings/User.astro"
 
 When I was assigned my first Technical Lead role working on a project helping Women's Aid create an Instant Messaging service that allowed them to discretely and securely support survivors of domestic abuse whilst capturing data for their funders, I acutely knew the importance of choosing the right technology.
 
