--- a/src/content/thoughts/how-to-write-articles.mdx
+++ b/src/content/thoughts/how-to-write-articles.mdx
@@ -1,14 +1,13 @@
 ---
-layout: ../../layouts/Layout.astro
 title: How to write articles
 description: A process for writing more structured content
 stage: note
 lastEdited: 8.09.2022
-theme: "self-promotion"
+theme: writing
 draft: true
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 ## Step 1
 
