--- a/src/content/thoughts/making-the-most-of-observations.mdx
+++ b/src/content/thoughts/making-the-most-of-observations.mdx
@@ -1,13 +1,12 @@
 ---
-layout: ../../layouts/Layout.astro
 title: Making the most of observations
 description: Where to find inspiration for notes
 stage: note
 lastEdited: 31.08.2022
-theme: "self-improvement"
+theme: self-management
 ---
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 - What have you heard/read/talked about today?
 - What does that mean?
