--- a/src/content/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/content/thoughts/taking-notes-to-the-next-level.mdx
@@ -1,17 +1,16 @@
 ---
-layout: ../../layouts/Layout.astro
 title: Taking notes to the next level
 description: Using a digital garden for cultivating wisdom
 stage: reflection
 lastEdited: 08.09.2022
-theme: "self-improvement"
+theme: self-management
 ---
 
-import Acorn from "../../components/Acorn.astro";
-import Sapling from "../../components/Sapling.astro";
-import Tree from "../../components/Tree.astro";
+import Acorn from "@drawings/Acorn.astro";
+import Sapling from "@drawings/Sapling.astro";
+import Tree from "@drawings/Tree.astro";
 
-import ReadMore from "../../components/ReadMore.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 I love the internet. Each time I unearth a nugget of information, my brain lights up.
 
