--- a/src/content/thoughts/making-the-most-of-observations.mdx
+++ b/src/content/thoughts/making-the-most-of-observations.mdx
@@ -4,6 +4,7 @@ description: Where to find inspiration for notes
 stage: note
 lastEdited: 31.08.2022
 theme: self-management
+draft: true
 ---
 
 import ReadMore from "@components/ReadMore.astro";
