--- a/src/content/thoughts/teamwork-makes-the-dream-work.mdx
+++ b/src/content/thoughts/teamwork-makes-the-dream-work.mdx
@@ -51,3 +51,37 @@ Legitimation:
 Support:
 “I'd like to help you with this.”
 “I want to see you succeed.”
+
+We are greater than the sum of our parts.
+
+I've always been an advocate of a laser focus on the process of capturing customer insight to producing value.
+
+Team's working in high-trust and psychologically-safe environments are honest with each other, willing to have difficult conversations and want to learn and get better together.
+
+By harbouring a safe environment, teams can find their flow through continuous improvement.
+
+Teams need high autonomy and high alignment for success.
+
+1. Get to know each other
+2. Do stuff together
+3. Work in the open - transparency, empathy and realism. gain creditability and trust. empathy is understanding everyone else has different gomotivavyions
+Create a team identity
+4. Collaborate - always work together, the expertise of the discipline determines who leads the work
+Understand the mission - create a vision - focus , fall back common purpose
+avoid designing non-viable ideas - no internal design agencies
+5. Understand the flow of work 
+- start with insight into user needs
+- ideate how to solve the problem - set a hypothesis - determine what success looks like
+- co-create
+- get feedback
+- learn and adapt
+- no handovers, waste of resource - working software
+- avoid jargon - explain like I'm 5
+- rituals for gathering feedback from each other
+- participate in each others work and meetings
+5. Empower teams to work on problems — give space for innovation
+5. Work on small batches — break problems into smaller releasable features
+Experiement
+6. Listen to feedback and learn
+snälltolka
+
