updating dopamine essay

--- a/src/content/thoughts/dopamine.mdx
+++ b/src/content/thoughts/dopamine.mdx
@@ -1,8 +1,8 @@
 ---
 title: Dopamine — this changes everything
 description: How dopamine rules your life and what you need to do to change
-stage: note
-lastEdited: 05.02.2023
+stage: essay
+lastEdited: 16.04.2023
 theme: self-management
 ---
 
@@ -40,60 +40,32 @@ Different behaviours cause different peaks and those peaks last for different le
 
 Eating some chocolate causes dopamine to spike one and a half times its normal levels. Mmm chocolate.
 
-Taking cocaine spikes your dopamine levels by X.
+Taking cocaine spikes your dopamine levels by a lot more than chocolate. You can probably guess at which substances and foods have this effect. All the more-ish ones.
 
 Interestingly, we get a dopamine spike when we hear or read something that validates our beliefs.
 
-So, immediately after you experience a dopamine high, your dopamine is in a depleted state. If you experience the same thing again, it won't have the same effect as there is less dopamine in your system to spike.
+Immediately after you experience a dopamine high, your dopamine is in a depleted state. If you experience the same thing again, it won't have the same effect as there is less dopamine in your system to spike.
 
 [draw this]
 
-This is how we build up tolerances to things. [expand]
+This is how we build up tolerances to things. For example, if you are scrolling through social media, you might find posts that are really interesting. They may spike your dopamine but as you scroll more and more, you'll find yourself finding fewer and fewer posts that have this same initial effect.
 
 ### Layering
 
-Using your smart phone is a pleasurable experience. It contains a multitude of apps that have been finetuned to take advantage of your dopamine system to make them addictive. Many people enhance experiences by using their device, to take photos or live tweet or whatever.
+Using your smart phone is a pleasurable experience. A well-crafted smooth device with every detail designed to be pleasurable. It contains a multitude of apps that have been finetuned to take advantage of your dopamine system. Many people enhance experiences by using their device, to take photos or live tweet or whatever.
 
-However, it's this layering effect that is particularly bad. We are already getting an increase of dopamine from the activity we are doing, but adding additional dopamine spikes through smart phone usage is particularly bad.
-
-[draw this]
+However, it's this layering effect that is particularly bad. You are already getting an increase of dopamine from the activity, but the additional dopamine spikes that occur from smart phone usage is particularly bad.
 
 How often have you been doing something enjoyable only to pull out your smart phone and get completely distracted from what you were doing?
 
-I know I have. I used to use my iPhone when practising guitar. I have found myself looking up song lyrics on my phone and getting completely distracted.
+I know I have. I used to use my iPhone when practising guitar. I have found myself looking up song lyrics on my phone, getting completely distracted and realising ten minutes had passed with out playing a note.
 
-## How to change and use dopamine to your advantage
+## How to change and use dopamine to your advantage by establishing a growth mindset
 
-### Cold turkey
+Now I wrote this after listening to the [Huberman lab](https://hubermanlab.com/controlling-your-dopamine-for-motivation-focus-and-satisfaction/) podcast which details a whole raft of different strategies for dealing with dopamine. Surprisingly, cold showers and cold turkey seem to be the order of the day.  But the strategy that I've found most effective, is focussing on what I'm trying to acheive and how I am acheiving it.
 
-So one thing we can do is to go cold turkey on some of these behaviours. There are plenty of products [research this] that will help you do a digital detox.
+Because, what I found is that you need to convince yourself that hard work is the goal. Working for a reward that pays off a long time in the future is hard. But, if you believe that striving to be better is enjoyable then you can spike your dopamine levels just by working. You have to tell yourself that in that momement you are doing this by choice and you are doing it because you love it. It's mind over matter at first but I've found that this works.
 
-We lose that tolerance that we build up and we start to enjoy the mundane. [expand]
-
-Try a complete fast from social media, videogames, and phone use for 30 days.
-
-If nothing else, avoid layering.
-
-### Intermittant random rewards
-
-Instead of chronically spiking dopamine... randomly reward behaviours you do want to do. [expand]
-
-### Don't spike dopamine at the begining or end of an activity.
-
-[expand]
-
-### Cold water exposure
-
-Exposure to cold water gives you a slow build of dopamine that lasts for hours.
-
-[expand]
-
-### Establishing a growth mindset
-
-You need to convince yourself that hard work is the goal. Working for a reward that pays off a long time in the future is hard. But, if you believe that striving to be better is enjoyable then you can spike your dopamine levels. You have to tell yourself that in that momement you are doing this by choice and you are doing it because you love it.
-
-Another example of this is if you are doing Intermittent Fasting.  If you concentrate on breaking the fast as the reward, then fasting can be difficult. But by attaching dopamine to the fasting by thinking about all the good that is happening to your body [expand], then the reward becomes the fast.
-
-Checkout this [Huberman lab](https://hubermanlab.com/controlling-your-dopamine-for-motivation-focus-and-satisfaction/) podcast for a much more detailed explanation of dopamine.
+Another example of this, also mentioned on the podcast, is Intermittent Fasting.  If you concentrate on breaking the fast as the reward, then fasting can be difficult. But by attaching dopamine to the fasting by thinking about all the good that is happening to your body [expand] when you are hungry, then the fasting becomes the reward.
 
 <ReadMore theme={frontmatter.theme} title={frontmatter.title} />
