--- a/src/content/thoughts/dopamine.mdx
+++ b/src/content/thoughts/dopamine.mdx
@@ -14,15 +14,15 @@ You may know dopamine as the *feel good* chemical in your brain. Along with sero
 
 Dopamine is released in response to pleasurable stimuli, such as food, sex, or drugs, and it sends a signal to the brain that says, "This is good, do it again." It's like a high-five from your brain, rewarding you for engaging in activities that lead to pleasure and reinforcing those behaviours.
 
-You can think of dopamine as the conductor of an orchestra — its role is integral to many of your systems. Just as the conductor directs and coordinates the actions of the musicians, dopamine helps coordinate and regulate different areas of the brain.
+Dopamine controls your primitive seeking and foraging behaviours — seeking things that makes us feel good, food, water, salt, sex — and avoiding things that make us feel bad.
 
-Dopamine controls your primitive seeking and foraging behaviours. Seeking things that makes us feel good, food, water, salt, sex; and avoiding things that make us feel bad.
+You can think of dopamine as the conductor of an orchestra — its role is integral to many of your systems. And just as the conductor directs and coordinates the actions of the musicians, dopamine helps coordinate and regulate many different areas of the brain.
 
-Your energy and mindset are controlled by dopamine. When you are in a low dopamine state, you are lethargic. When you are in a high dopamine state you are really excited.
+In particular, our energy and mindset are controlled by dopamine. When you are in a low dopamine state, you are lethargic. When you are in a high dopamine state you are really excited and energetic.
 
-Dopamine is critical for normal movement control, and its loss in Parkinson's disease leads to a range of motor symptoms, including tremors, rigidity, bradykinesia (slowness of movement), and postural instability. These symptoms occur because the basal ganglia, the part of the brain that is responsible for movement control, is not receiving enough dopamine to function properly.
+Dopamine is critical for normal movement control. For example, in people with Parkinson's disease, the basal ganglia, the part of the brain that is responsible for movement control, is not receiving enough dopamine to function properly. This leads to motor symptoms including tremors, rigidity, and slowness of movement.
 
-With dopamine completely inhibited, we essentially become paralysed. Without dopamine, we can’t get out of bed.
+With dopamine completely inhibited, we essentially become paralysed. Without dopamine, we don’t get out of bed.
 
 ## How your reward system works and why layering is bad
 
@@ -64,8 +64,12 @@ I know I have. I used to use my iPhone when practising guitar. I have found myse
 
 Now I wrote this after listening to the [Huberman lab](https://hubermanlab.com/controlling-your-dopamine-for-motivation-focus-and-satisfaction/) podcast which details a whole raft of different strategies for dealing with dopamine. Surprisingly, cold showers and cold turkey seem to be the order of the day.  But the strategy that I've found most effective, is focussing on what I'm trying to acheive and how I am acheiving it.
 
-Because, what I found is that you need to convince yourself that hard work is the goal. Working for a reward that pays off a long time in the future is hard. But, if you believe that striving to be better is enjoyable then you can spike your dopamine levels just by working. You have to tell yourself that in that momement you are doing this by choice and you are doing it because you love it. It's mind over matter at first but I've found that this works.
+Because, what I've found is that you need to convince yourself that hard work itself is the goal. Working for a reward that pays off a long time in the future is difficult to do. That's not how dopamine works.
+
+But, if you can be of the mindset that the act of striving to be better is what you're aiming for, then you can spike your dopamine levels just by working. You have to tell yourself that in that momement you are doing this by choice and you are doing it because you love it. It's mind over matter at first but I've found that this does work.
 
 Another example of this, also mentioned on the podcast, is Intermittent Fasting.  If you concentrate on breaking the fast as the reward, then fasting can be difficult. But by attaching dopamine to the fasting by thinking about all the good that is happening to your body [expand] when you are hungry, then the fasting becomes the reward.
+
+Leave your phone alone and enjoy grafting at your craft.
 
 <ReadMore theme={frontmatter.theme} title={frontmatter.title} />
