updating dopamine essay

--- a/src/content/thoughts/dopamine.mdx
+++ b/src/content/thoughts/dopamine.mdx
@@ -62,14 +62,14 @@ I know I have. I used to use my iPhone when practising guitar. I have found myse
 
 ## How to change and use dopamine to your advantage by establishing a growth mindset
 
-Now I wrote this after listening to the [Huberman lab](https://hubermanlab.com/controlling-your-dopamine-for-motivation-focus-and-satisfaction/) podcast which details a whole raft of different strategies for dealing with dopamine. Surprisingly, cold showers and cold turkey seem to be the order of the day.  But the strategy that I've found most effective, is focussing on what I'm trying to acheive and how I am acheiving it.
+I wrote this after listening to the [Huberman lab](https://hubermanlab.com/controlling-your-dopamine-for-motivation-focus-and-satisfaction/) podcast which details a whole raft of different strategies for dealing with dopamine. Surprisingly, cold showers and cold turkey seem to be the order of the day.  But the strategy that I've found most effective, is focussing on what I'm trying to acheive and how I am acheiving it.
 
-Because, what I've found is that you need to convince yourself that hard work itself is the goal. Working for a reward that pays off a long time in the future is difficult to do. That's not how dopamine works.
+Because, what I've found is, you need to convince yourself that hard work itself is the goal. Working for a reward that pays off a long time in the future is difficult to do. That's not how dopamine works.
 
-But, if you can be of the mindset that the act of striving to be better is what you're aiming for, then you can spike your dopamine levels just by working. You have to tell yourself that in that momement you are doing this by choice and you are doing it because you love it. It's mind over matter at first but I've found that this does work.
+But, if you can be of the mindset that the act of striving to be better is what you're aiming for, you can spike your dopamine levels. You have to tell yourself that in that momement you are doing this by choice and you are doing it because you love it. It's mind over matter at first but I've found that this does work.
 
-Another example of this, also mentioned on the podcast, is Intermittent Fasting.  If you concentrate on breaking the fast as the reward, then fasting can be difficult. But by attaching dopamine to the fasting by thinking about all the good that is happening to your body [expand] when you are hungry, then the fasting becomes the reward.
+Another example of this, also mentioned on the podcast, is Intermittent Fasting.  If you concentrate on breaking the fast as the reward, then fasting can be difficult. But by attaching dopamine to the fasting by thinking about all the good that is happening to your body when you are hungry (your fat is used for energy and the beneficial bacteria in your gut biome increase) then the fasting becomes the reward.
 
-Leave your phone alone and enjoy grafting at your craft.
+So leave your phone alone and enjoy grafting and honing your craft.
 
 <ReadMore theme={frontmatter.theme} title={frontmatter.title} />
